--- a/templates/main.html
+++ b/templates/main.html
@@ -2,17 +2,20 @@
 
 {% block content %}
 
-<form method="post">
+
     <h1>Blogposts</h1>
-</form>
+
+<form method="get" action="/blog">
+
+
 
 {% for blogpost in blogposts %}
     <ul class="blogpost">
-        <li><a href="{{blogpost.title}}" class="blogpost-title" value="{{blogpost.key().id()}}">{{blogpost.title}}</a></li>
+        <li><a href="/blog/{{blogpost.key().id()}}" class="blogpost-title" value="{{blogpost.key().id()}}">{{blogpost.title}}</a></li>
         <pre class="blogpost-body" value="{{blogpost.key().id()}}">{{blogpost.blogpost}}</pre>
         <hr>
     </ul>
 {% endfor %}
-
+</form>    
 
 {% endblock %}
